--- a/source/components/header/index.pug
+++ b/source/components/header/index.pug
@@ -1,6 +1,5 @@
 header.header
 	.header__item
-		img.header__logo(src=require('../../components/header/logo.png'))
-		.header__menu
-			+svgIcon('menu', 'header__switch-menu header__menu-icon menu-ico')
+		+svgIcon('logo', 'header__logo')
+		include ./menu/index
 	include ./search/index
