--- a/source/components/header/search/index.pug
+++ b/source/components/header/search/index.pug
@@ -2,4 +2,4 @@ form.header__form.form
 	label.form__label.header__form-label
 		input.form__input(placeholder="Поиск магазинов")
 		+svgIcon('search', 'form__search-icon')
-	a(href="#").header__form-link Магазины
+	a(href="#").header__form-link.btn.btn_accent Магазины
