--- a/source/mixins/index.pug
+++ b/source/mixins/index.pug
@@ -1,7 +1,7 @@
 mixin svgIcon(id, className)
 	if(className)
-		svg(class=`${className}`)
+		svg(class=`${id}-ico ${className}`)
 			use(xlink:href=`#${id}-ico`)
 	else
-		svg
+		svg(class=`${id}-ico`)
 			use(xlink:href=`#${id}-ico`)
