--- a/source/pages/index/index.sass
+++ b/source/pages/index/index.sass
@@ -21,6 +21,11 @@
   background:
     color: $secondary-color
 
+.btn_uppercase
+  text-transform: uppercase
+  padding:
+    top: .1rem
+
 //icons
 .search-ico
   width: .9rem
@@ -33,63 +38,37 @@
 .close-ico
   width: 1.5rem
   height: 1.5rem
-//
-//.shop-ico
-//  width: 1.15rem
-//  height: 1.15rem
-//
-//.extension-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.question-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.news-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.star-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.order-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.message-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.support-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.add-friend-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.wallet-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.notification-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.link-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.settings-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.history-ico
-//  width: 1.5rem
-//  height: 1.5rem
-//
-//.exit-ico
-//  width: 1.5rem
-//  height: 1.5rem
+
+.status-ico
+  width: 1.5rem
+  height: 1.5rem
+
+.settings-ico
+  width: 1.5rem
+  height: 1.5rem
+
+.email-ico
+  width: 1.5rem
+  height: 1.5rem
+
+.avatar-ico
+  width: 1.5rem
+  height: 1.5rem
+
+.vk-ico
+  fill: #537598
+
+.fb-ico
+  fill: #094d93
+
+.ok-ico
+  fill: #e85a24
+
+.g-plus-ico
+  fill: #c94538
+
+.ya-ico
+  fill: #e32121
+
+.mailru-ico
+  fill: #ffb131
