--- a/source/components/header/index.sass
+++ b/source/components/header/index.sass
@@ -14,6 +14,21 @@
   width: 7.4rem
   height: 3.1rem
 
+.header__switch-menu
+  cursor: pointer
+  .header__menu-icon
+    pointer-events: none
+
+.header__menu-icon
+  cursor: pointer
+  fill: #747474
+  margin:
+    top: -1px
+
+.header__menu_authorised
+  .menu__close
+    fill: $gray-color
+
 .header__menu-inner
   display: flex
   flex-flow: column
