--- a/source/styles/varialbes.sass
+++ b/source/styles/varialbes.sass
@@ -2,7 +2,7 @@
 $accent-color: #2f92d3
 $secondary-color: #f7b740
 $error-color: #ff0000
-$hint-color: #9d9d9d
+$gray-color: #767676
 $black-color: #000000
 $white-color: #ffffff
 
