--- a/source/components/header/menu/entry/index.pug
+++ b/source/components/header/menu/entry/index.pug
@@ -1,3 +1,4 @@
 .entry.not-authorised-item
-	.entry__register.entry__item.btn.btn_secondary(data-form-type="register-form") Регистрация
-	.entry__login.entry__item.btn.btn_accent(data-form-type="login-form") Войти
+	.entry__inner
+		.show-form.entry__register.entry__item.btn.btn_secondary(data-form-type="register-form") Регистрация
+		.show-form.entry__login.entry__item.btn.btn_accent(data-form-type="login-form") Войти
