--- a/source/components/header/menu/menu-list/index.sass
+++ b/source/components/header/menu/menu-list/index.sass
@@ -5,9 +5,9 @@
   flex: 1
   border:
     top: 1px solid #ebebeb
-  padding: 1rem 0
+  padding: 1.4rem 0
   margin:
-    top: 1.8rem
+    top: 1.88rem
   overflow: hidden
 
 .menu__list-inner
@@ -17,11 +17,13 @@
   overflow: auto
 
 .menu__list-item
-  min-height: 2.5rem
+  height: 35px
   width: 100%
   display: flex
   align-items: flex-end
-  padding: .7rem .5rem
+  padding: .6rem .5rem
+  margin:
+    bottom: .28rem
   border:
     radius: 4px
   transition: $common-transition-duration
@@ -32,6 +34,10 @@
     .menu__list-item-icon
       fill: $white-color
 
+.menu__list-item-exit
+  background:
+    color: #f3f3f3
+
 .menu__list-item-title
   margin:
     left: 1.55rem
@@ -41,3 +47,37 @@
   fill: $gray-color
   width: 1.2rem
   height: 1.2rem
+
++media-query($tablet)
+  .menu__list
+    padding: 2rem 0
+    margin:
+      top: 2rem
+
+  .menu__list-item
+    padding: .6rem 1.1rem
+    margin: 0
+
++media-query($desktop)
+  .menu__list
+    opacity: 0
+    position: absolute
+    right: 0
+    width: 280px
+    box-shadow: 0 0 16px rgba(0, 0, 0, .45)
+    background-color: $white-color
+    transition: $common-transition-duration
+    pointer-events: none
+    top: 8.6rem
+    margin: 0
+    padding: .6rem .2rem .1rem .2rem
+    border-radius: 6px
+    &.active
+      opacity: 1
+      pointer-events: auto
+
+  .menu__list-item-title
+    font:
+      size: 14px
+    margin:
+      left: 1.4rem
