--- a/source/components/header/menu/entry/index.sass
+++ b/source/components/header/menu/entry/index.sass
@@ -3,6 +3,14 @@
 .entry
   display: flex
   justify-content: center
+  order: 1
+  width: 100%
+  margin:
+    top: 1.9rem
+
+.entry__inner
+  display: flex
+  width: 316px
 
 .entry__item
   margin:
@@ -12,9 +20,27 @@
       right: 0
 
 .entry__register
-  width: 168px
-  height: 45px
+  width: 167px
 
 .entry__login
   width: 139px
-  height: 45px
+
++media-query($tablet)
+  .entry
+    width: auto
+    order: 0
+    margin:
+      top: 0
+
+  .entry__inner
+    width: auto
+
+  .entry__item
+    margin:
+      right: 1.3rem
+
+  .entry__register
+    width: 145px
+
+  .entry__login
+    width: 94px
