--- a/source/components/header/menu/forms/index.sass
+++ b/source/components/header/menu/forms/index.sass
@@ -1,9 +1,14 @@
 @import "../../../../styles/varialbes"
 
 .form
-  display: none
+  cursor: default
   flex-flow: column
-  flex: 1
+  width: 100%
+  opacity: 0
+  transition: $common-transition-duration, opacity 0s
+  pointer-events: none
+  position: absolute
+  transform: translate(100vw)
 
 .form__inner
   flex: 1
@@ -11,7 +16,8 @@
     bottom: 2rem
   overflow: auto
 
-.form__title
+.form__header
+  position: relative
   text-align: center
   font:
     size: 23px
@@ -19,7 +25,14 @@
   color: $gray-color
   text-transform: uppercase
   margin:
-    bottom: 1.45rem
+    bottom: 1.4rem
+
+.form__header-close
+  display: none
+  fill: $gray-color
+  position: absolute
+  right: -1.7rem
+  top: 0
 
 .form__form-elements
   display: flex
@@ -38,7 +51,7 @@
   display: flex
   border:
     radius: 4px
-  padding: .82rem 1rem
+  padding: 0 1rem
   border: 1px solid #bfbfbf
 
 .form__input-label_fill
@@ -47,14 +60,24 @@
     color: #f3f3f3
 
 .form__input
-  flex: 1
+  width: 100%
   font:
     size: 14px
   &::placeholder
     color: #9d9d9d
 
 .form__link
+  cursor: pointer
   color: $accent-color
+  +hover
+
+.form__link-desktop
+  display: none
+  justify-content: flex-end
+  margin:
+    bottom: 1.5rem
+    top: -1rem
+  color: $gray-color
 
 .login-form__actions
   display: flex
@@ -64,4 +87,78 @@
   margin:
     right: 1.6rem
   width: 151px
-  height: 45px
+
+.form__form-static
+  display: none
+  border:
+    radius: 4px
+  margin:
+    bottom: 2.25rem
+
+.form__captcha-row
+  display: flex
+  justify-content: space-between
+
+.form__captcha
+  width: 147px
+  border:
+    radius: 4px
+  background:
+    color: #f3f3f3
+
+.form__captcha-input
+  width: 148px
+
++media-query($tablet)
+  .form__header
+    margin:
+      bottom: 5rem
+
+  .form__header-close
+    display: flex
+
++media-query($desktop)
+  .form
+    transform: none
+    border:
+      radius: 6px
+    background:
+      color: $white-color
+
+  .form__header
+    margin:
+      bottom: 0
+    padding: 2rem 0
+    background:
+      color: #f8f8f8
+    border-top-left-radius: 6px
+    border-top-right-radius: 6px
+
+  .form__header-close
+    fill: $black-color
+    right: 1.7rem
+    top: 50%
+    transform: translate(0, -50%)
+
+  .form__inner
+    display: flex
+    padding: 2rem 4rem 1rem
+
+  .form__form-elements
+    order: 1
+    margin: 0
+    flex: 1
+
+  .form__form-static
+    display: flex
+
+  .form__link-mobile
+    display: none
+
+  .form__link-desktop
+    display: flex
+
+  .login-form__btn
+    flex: 1
+    margin:
+      right: 0
