--- a/source/components/header/menu/index.sass
+++ b/source/components/header/menu/index.sass
@@ -1,36 +1,48 @@
 @import "../../../styles/varialbes"
 
-$headerHeight: 58px
-
 .menu__head
   display: flex
+
+.menu__head-inner
+  display: flex
   justify-content: flex-end
-  height: $headerHeight
-  padding: 1.1rem 1.4rem
+  flex-wrap: wrap
+  width: 100%
+  background:
+    color: $white-color
+
+.menu__head-close-row
   background:
     color: #f5f5f5
+  width: 100%
+  padding: 1.1rem 1.4rem
+
+.menu__head-close-row-inner
+  display: flex
+  justify-content: flex-end
+  width: 316px
 
 .menu__close
-  cursor: pointer
   fill: $accent-color
 
 .menu__body
   display: flex
-  flex-flow: column
   flex: 1
   background:
     color: $white-color
-  padding: 1.9rem .75rem 0
+  padding: 0 .75rem
 
 .menu__forms
+  cursor: pointer
   display: flex
   flex-flow: column
+  align-items: center
   position: absolute
   left: 0
   right: 0
-  top: $headerHeight
+  top: 59px
   bottom: 0
-  transform: translate(100%)
+  visibility: hidden
   transition: $common-transition-duration
   padding:
     top: 2.2rem
@@ -38,17 +50,121 @@ $headerHeight: 58px
     right: 1.3rem
   background:
     color: $white-color
+  pointer-events: none
   &.active
-    transform: translate(0)
+    pointer-events: auto
+    visibility: visible
+
+.menu__forms-inner
+  position: relative
+  width: 316px
 
 .register-form-wrapper
   .register-form
-    display: flex
-  .login-form
-    display: none
+    transform: translate(0)
+    opacity: 1
+    pointer-events: auto
 
 .login-form-wrapper
-  .register-form
-    display: none
   .login-form
+    transform: translate(0)
+    opacity: 1
+    pointer-events: auto
+
+.recovery-form-wrapper
+  .recovery-form
+    transform: translate(0)
+    opacity: 1
+    pointer-events: auto
+
++media-query($tablet)
+  .menu__head
+    background:
+      color: $white-color
+
+  .menu__head-inner
+    align-items: center
+    justify-content: space-between
+    padding: 2.15rem 0 .5rem 2rem
+    width: calc(411px + 1rem)
+
+  .menu__head-close-row
+    width: auto
+    background:
+      color: $white-color
+    align-items: center
+    padding: 0
+
+  .menu__head-close-row-inner
+    width: auto
+
+  .menu__body
+    justify-content: flex-start
+
+  .menu__body-inner
+    width: 411px
+
+  .menu__forms
+    align-items: flex-start
+    padding:
+      top: 3.6rem
+    top: 0
+
+  .menu__forms-inner
+    width: 385px
+
++media-query($desktop)
+  .menu__head-inner
+    padding: 0
+    width: auto
+    background:
+      color: transparent
+
+  .menu__head-close-row
+    display: none
+
+  .menu__body
+    opacity: 0
+    pointer-events: none
+    position: fixed
+    left: 0
+    right: 0
+    top: 0
+    bottom: 0
+    padding: 0
+    transition: $common-transition-duration
+    background:
+      color: transparent
+    &.active
+      opacity: 1
+      pointer-events: auto
+
+  .header__menu_authorised
+    .menu__body
+      position: relative
+      left: auto
+      right: auto
+      top: auto
+      bottom: auto
+      opacity: 1
+      pointer-events: auto
+
+  .menu__body-inner
+    width: 100%
+
+  .menu__forms
     display: flex
+    align-items: center
+    justify-content: center
+    flex: 1
+    padding:
+      top: 0
+    background:
+      color: rgba(0, 0, 0, .6)
+
+  .menu__forms-inner
+    width: 824px
+    display: flex
+    align-items: center
+    justify-content: center
+    flex: 1
