--- a/source/components/header/search/index.sass
+++ b/source/components/header/search/index.sass
@@ -2,6 +2,8 @@
 
 .header__form
   display: flex
+  width: 100%
+  order: 1
   margin:
     top: 1rem
 
@@ -9,14 +11,16 @@
   background:
     color: #f3f2f2
   flex: 1
-  padding: .55rem 1rem
+  padding: .55rem .9rem
   display: flex
+  align-items: center
   border:
     radius: 4px
 
 .header__form-input
   flex: 1
-  font-size: 13px
+  font:
+    size: 13px
   padding:
     right: .4rem
 
@@ -32,3 +36,29 @@
   margin:
     top: .1rem
     right: -.3rem
+
++media-query($tablet)
+  .header__form-label
+    align-items: center
+    padding: .65rem 1rem .55rem 1.2rem
+
+  .form__search-icon
+    margin:
+      top: .1rem
+      right: 0
+
+  .header__form
+    order: 0
+    margin:
+      top: 0
+    width: 435px
+
+  .header__form-link
+    width: 126px
+    height: 45px
+    margin:
+      left: 1.3rem
+
++media-query($desktop)
+  .header__form
+    width: 500px
