--- a/source/components/header/menu/forms/index.sass
+++ b/source/components/header/menu/forms/index.sass
@@ -9,6 +9,8 @@
   pointer-events: none
   position: absolute
   transform: translate(100vw)
+  padding:
+    top: 3.6rem
 
 .form__inner
   flex: 1
@@ -124,6 +126,8 @@
       radius: 6px
     background:
       color: $white-color
+    padding:
+      top: 0
 
   .form__header
     margin:
