--- a/source/components/header/menu/index.sass
+++ b/source/components/header/menu/index.sass
@@ -32,6 +32,10 @@
     color: $white-color
   padding: 0 .75rem
 
+.menu__body-inner
+  display: flex
+  flex-flow: column
+
 .menu__forms
   cursor: pointer
   display: flex
@@ -45,14 +49,15 @@
   visibility: hidden
   transition: $common-transition-duration
   padding:
-    top: 2.2rem
+    top: 0
     left: 1.3rem
     right: 1.3rem
   background:
     color: $white-color
   pointer-events: none
   &.active
-    pointer-events: auto
+    pointer-events: none
+    padding-top: 0
     visibility: visible
 
 .menu__forms-inner
@@ -76,6 +81,7 @@
     transform: translate(0)
     opacity: 1
     pointer-events: auto
+
 
 +media-query($tablet)
   .menu__head
@@ -106,8 +112,6 @@
 
   .menu__forms
     align-items: flex-start
-    padding:
-      top: 3.6rem
     top: 0
 
   .menu__forms-inner
@@ -161,6 +165,8 @@
       top: 0
     background:
       color: rgba(0, 0, 0, .6)
+    &.active
+      pointer-events: auto
 
   .menu__forms-inner
     width: 824px
