--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -4,4 +4,5 @@ block title
 	| Backmycash
 block content
 	include ../../components/state-popup/index
+	include ../../components/banner/index
 	include ../../components/overlay/index
