--- a/source/components/header/search/index.sass
+++ b/source/components/header/search/index.sass
@@ -14,8 +14,7 @@
   padding: .55rem .9rem
   display: flex
   align-items: center
-  border:
-    radius: 4px
+  +border-radius
 
 .header__form-input
   flex: 1
