--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -5,4 +5,5 @@ block title
 block content
 	include ../../components/state-popup/index
 	include ../../components/banner/index
+	include ../../components/shops/index
 	include ../../components/overlay/index
