--- a/source/components/header/menu/forms/index.sass
+++ b/source/components/header/menu/forms/index.sass
@@ -51,8 +51,7 @@
 
 .form__input-label
   display: flex
-  border:
-    radius: 4px
+  +border-radius
   padding: 0 1rem
   border: 1px solid #bfbfbf
 
@@ -92,8 +91,7 @@
 
 .form__form-static
   display: none
-  border:
-    radius: 4px
+  +border-radius
   margin:
     bottom: 2.25rem
 
@@ -103,8 +101,7 @@
 
 .form__captcha
   width: 147px
-  border:
-    radius: 4px
+  +border-radius
   background:
     color: #f3f3f3
 
@@ -122,8 +119,7 @@
 +media-query($desktop)
   .form
     transform: none
-    border:
-      radius: 6px
+    +border-radius(6px)
     background:
       color: $white-color
     padding:
