--- a/source/components/header/menu/menu-list/index.sass
+++ b/source/components/header/menu/menu-list/index.sass
@@ -25,8 +25,7 @@
   padding: .6rem .5rem
   margin:
     bottom: .28rem
-  border:
-    radius: 4px
+  +border-radius
   transition: $common-transition-duration
   &:hover
     background:
@@ -72,7 +71,7 @@
     top: 8.6rem
     margin: 0
     padding: .6rem .2rem .1rem .2rem
-    border-radius: 6px
+    +border-radius(6px)
     &.active
       opacity: 1
       pointer-events: auto
