--- a/source/components/state-popup/index.sass
+++ b/source/components/state-popup/index.sass
@@ -16,8 +16,7 @@
 .state-popup__inner
   background:
     color: $white-color
-  border:
-    radius: 4px
+  +border-radius
   padding: 1rem
 
 .state-popup__items
@@ -27,8 +26,7 @@
 .state-popup__item
   text-align: center
   cursor: pointer
-  border:
-    radius: 4px
+  +border-radius()
   transition: background-color $common-transition-duration, color $common-transition-duration
   padding: .5rem 1rem
   &:hover
