--- a/source/components/banner/index.sass
+++ b/source/components/banner/index.sass
@@ -75,7 +75,8 @@ $carousel-navigation-height_desktop: 68px
       opacity: 0
       transition: $common-transition-duration
     &:last-of-type
-      margin-right: 0
+      margin:
+        right: 0
   .swiper-pagination-bullet-active
     background:
       color: $white-color
