--- a/source/components/header/menu/index.sass
+++ b/source/components/header/menu/index.sass
@@ -57,7 +57,8 @@
   pointer-events: none
   &.active
     pointer-events: none
-    padding-top: 0
+    padding:
+      top: 0
     visibility: visible
 
 .menu__forms-inner
