--- a/source/components/shops/filter/index.sass
+++ b/source/components/shops/filter/index.sass
@@ -23,9 +23,10 @@ $list-item-height: 38px
     right: 1rem
     width: 0
     height: 0
-    border-style: solid
-    border-width: 9px 5px 0 5px
-    border-color: #c2c2c2 transparent transparent transparent
+    border:
+      style: solid
+      width: 9px 5px 0 5px
+      color: #c2c2c2 transparent transparent transparent
     transition: $common-transition-duration
   .filter__list-item
     pointer-events: none
@@ -36,6 +37,7 @@ $list-item-height: 38px
 .filter__list
   box-shadow: 0 0 8px rgba(0, 0, 0, .25)
   position: absolute
+  z-index: 2
   left: 0
   right: 0
   padding: 6px
@@ -115,8 +117,9 @@ $list-item-height: 38px
       color: $secondary-color
     &:nth-of-type(2n)
       justify-content: center
-      border-left: 2px solid #e1e1e1
-      border-right: 2px solid #e1e1e1
+      border:
+        left: 2px solid #e1e1e1
+        right: 2px solid #e1e1e1
     &:nth-of-type(3n)
       justify-content: flex-end
     &.active
