--- a/source/components/banner/index.pug
+++ b/source/components/banner/index.pug
@@ -3,7 +3,7 @@ mixin slides(cnt, img)
 		.banner__slide.swiper-slide
 			img.banner__slide-img(src=require(`../../components/banner/${img}`))
 
-.wrapper.banner
+.banner.wrapper
 	.wrapper__inner
 		.swiper-container.banner-container.carousel-container.banner-container_not-mobile
 			.swiper-wrapper.carousel-wrapper
