--- a/source/components/shops/index.sass
+++ b/source/components/shops/index.sass
@@ -4,6 +4,8 @@
   display: flex
   flex-flow: column
   align-items: center
+  padding:
+    bottom: 1.7rem
 
 .shops__list
   display: flex
@@ -150,6 +152,10 @@
     top: .4rem
 
 +media-query($tablet)
+  .shops
+    padding:
+      bottom: 1.3rem
+
   .shops__list
     flex-flow: row
     flex-wrap: wrap
