--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -6,4 +6,5 @@ block content
 	include ../../components/state-popup/index
 	include ../../components/banner/index
 	include ../../components/shops/index
+	include ../../components/how-it-works/index
 	include ../../components/overlay/index
