--- a/source/styles/global.sass
+++ b/source/styles/global.sass
@@ -130,6 +130,7 @@ main
     weight: 700
   margin:
     bottom: 1.25rem
+    top: 1.5rem
 
 +media-query($tablet)
   main
@@ -144,6 +145,7 @@ main
       size: 35px
     margin:
       bottom: 2.1rem
+      top: 2.2rem
 
   .menu-ico
     height: 2rem
