--- a/source/components/how-it-works/index.sass
+++ b/source/components/how-it-works/index.sass
@@ -32,7 +32,7 @@
   margin:
     top: 1.05rem
     bottom: 2.1rem
-  color: #666666
+  color: $gray-color_dark
 
 .how-it-works__step
   display: flex
