--- a/source/components/shops/index.sass
+++ b/source/components/shops/index.sass
@@ -51,7 +51,7 @@
   font:
     size: 20px
     weight: 700
-  color: #666666
+  color: $gray-color_dark
   margin:
     bottom: 2.15rem
 
@@ -132,7 +132,7 @@
 .tile-show-all__total
   display: none
   flex-flow: column
-  color: #666666
+  color: $gray-color_dark
   margin:
     bottom: 1.3rem
 
