--- a/source/styles/global.sass
+++ b/source/styles/global.sass
@@ -12,6 +12,9 @@ body
 .d-none
   display: none
 
+.no-scroll
+  overflow: hidden
+
 .fill-accent
   fill: $accent-color
 
@@ -123,7 +126,7 @@ main
     color: #f8f8f8
 
 .title
-  color: #666666
+  color: $gray-color_dark
   text-align: center
   font:
     size: 25px
