--- a/source/components/header/menu/forms/index.sass
+++ b/source/components/header/menu/forms/index.sass
@@ -77,7 +77,7 @@
   justify-content: flex-end
   margin:
     bottom: 1.5rem
-    top: -1rem
+    top: -.8rem
   color: $gray-color
 
 .login-form__actions
