--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -7,4 +7,5 @@ block content
 	include ../../components/banner/index
 	include ../../components/shops/index
 	include ../../components/how-it-works/index
+	include ../../components/about-us/index
 	include ../../components/overlay/index
