--- a/source/styles/varialbes.sass
+++ b/source/styles/varialbes.sass
@@ -3,6 +3,7 @@ $accent-color: #2f92d3
 $secondary-color: #f7b740
 $error-color: #ff0000
 $gray-color: #767676
+$gray-color_dark: #666666
 $black-color: #000000
 $white-color: #ffffff
 
