--- a/source/components/about-us/index.sass
+++ b/source/components/about-us/index.sass
@@ -68,3 +68,7 @@
 +media-query($tablet)
   .about-us
     display: flex
+
++media-query($desktop)
+  .about-us__inner
+    border-top-color: transparent
