--- a/source/components/banner/index.sass
+++ b/source/components/banner/index.sass
@@ -10,6 +10,10 @@ $carousel-navigation-height_desktop: 68px
 .carousel-wrapper
   display: flex
 
+.carousel-slide
+  flex-shrink: 0
+  position: relative
+
 .carousel-navigation
   display: flex
   justify-content: space-between
