--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -8,4 +8,5 @@ block content
 	include ../../components/shops/index
 	include ../../components/how-it-works/index
 	include ../../components/about-us/index
+	include ../../components/feedback/index
 	include ../../components/overlay/index
