--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -9,4 +9,5 @@ block content
 	include ../../components/how-it-works/index
 	include ../../components/about-us/index
 	include ../../components/feedback/index
+	include ../../components/text/index
 	include ../../components/overlay/index
