--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -1,13 +1,11 @@
-extends ../base
+extends ../base/index
 
 block title
 	| Backmycash
 block content
-	include ../../components/state-popup/index
 	include ../../components/banner/index
 	include ../../components/shops/index
 	include ../../components/how-it-works/index
 	include ../../components/about-us/index
 	include ../../components/feedback/index
 	include ../../components/text/index
-	include ../../components/overlay/index
