--- a/source/components/banner/index.sass
+++ b/source/components/banner/index.sass
@@ -91,6 +91,7 @@ $carousel-navigation-height_desktop: 68px
   +border-radius
 
 .banner__slide
+  transition: $common-transition-duration
   display: flex
   align-items: center
   justify-content: flex-end
