--- a/source/components/how-it-works/index.sass
+++ b/source/components/how-it-works/index.sass
@@ -102,6 +102,14 @@
     margin: 0
     transform: translate(0, -3.5rem)
 
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
+    .video-placeholder, .how-it-works__steps
+      flex: 1 0
+
+    .how-it-works__steps
+      margin: 0
+      transform: translate(0, -3rem)
+
   .how-it-works__step
     margin:
       bottom: -.7rem
