--- a/source/components/shops/filter/index.sass
+++ b/source/components/shops/filter/index.sass
@@ -28,6 +28,7 @@ $list-item-height: 38px
       width: 9px 5px 0 5px
       color: #c2c2c2 transparent transparent transparent
     transition: $common-transition-duration
+    top: calc(50% - 9px/2)
   .filter__list-item
     pointer-events: none
     &:before
@@ -70,6 +71,7 @@ $list-item-height: 38px
     position: absolute
     left: .95rem
     pointer-events: none
+    top: calc(50% - 5px/2)
     +border-radius(50%)
     background:
       color: #c1c1c1
