--- a/source/components/shops/index.sass
+++ b/source/components/shops/index.sass
@@ -248,8 +248,10 @@
   .shops__list
     margin:
       top: 2.5rem
+
   .shops__filter
-    width: 756px
+    &.wrapper__inner
+      width: 756px
 
   .tile
     width: 270px
