--- a/source/components/how-it-works/index.sass
+++ b/source/components/how-it-works/index.sass
@@ -21,7 +21,7 @@
   height: 192px
   width: 100%
   background:
-    image: url('video-placeholder.png')
+    image: url('../../components/how-it-works/video-placeholder.png')
     position: center
     repeat: no-repeat
     size: contain
