--- a/source/components/how-it-works/index.pug
+++ b/source/components/how-it-works/index.pug
@@ -9,6 +9,7 @@ mixin steps(items)
 		h2.title Как это работает
 		.how-it-works__middle
 			.video-placeholder
+				img(src=require('../../components/how-it-works/video-placeholder.png'))
 			.how-it-works__steps
 				+steps(
 				[
