--- a/source/components/shops/filter/index.sass
+++ b/source/components/shops/filter/index.sass
@@ -54,6 +54,7 @@ $list-item-height: 38px
     pointer-events: auto
 
 .filter__list-item
+  position: relative
   height: $list-item-height
   display: flex
   flex: 1
