--- a/source/components/header/menu/index.sass
+++ b/source/components/header/menu/index.sass
@@ -2,6 +2,7 @@
 
 .menu__head
   display: flex
+  min-height: 136px
 
 .menu__head-inner
   display: flex
@@ -90,6 +91,7 @@
 
 +media-query($tablet)
   .menu__head
+    min-height: 82px
     background:
       color: $white-color
 
