--- a/source/components/header/menu/index.sass
+++ b/source/components/header/menu/index.sass
@@ -125,6 +125,9 @@
     width: 385px
 
 +media-query($desktop)
+  .menu__head
+    justify-content: flex-end
+
   .menu__head-inner
     padding: 0
     width: auto
